[gd_scene load_steps=4 format=3 uid="uid://j5eu4dknyf1s"]

[ext_resource type="Script" uid="uid://dm77w1cqfm1an" path="res://scripts/custom_data_display.gd" id="1_b6rgq"]
[ext_resource type="StyleBox" uid="uid://bbl1eb5dnhvs2" path="res://visuals/normal_style_box.tres" id="2_k70rl"]

[sub_resource type="LabelSettings" id="LabelSettings_sa3gr"]
font_size = 30

[node name="CustomDataDisplay" type="Control" node_paths=PackedStringArray("entry_container", "title_label", "line", "main_control")]
layout_mode = 3
anchors_preset = 0
offset_right = 164.0
offset_bottom = 110.0
script = ExtResource("1_b6rgq")
entry_container = NodePath("PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/EntryContainer")
title = "Data Title"
title_label = NodePath("PanelContainer/MarginContainer/VBoxContainer/TitleLabel")
line = NodePath("Line2D")
main_control = NodePath("PanelContainer")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(82, 55, 55, 55, 0, 0)
width = 5.0
end_cap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 164.0
offset_bottom = 110.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_k70rl")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
text = "Data Title"
label_settings = SubResource("LabelSettings_sa3gr")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EntryContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RemoveEntryButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
text = "-"

[node name="AddEntryButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(31, 31)
layout_mode = 2
text = "+"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/RemoveEntryButton" to="." method="_on_remove_entry_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/AddEntryButton" to="." method="_on_add_entry_button_pressed"]
